<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_name">Name:</string>
    <string name="shoe_company">Company:</string>
    <string name="shoe_size">Shoe size:</string>
    <string name="shoe_description">Description:</string>
    <string name="add_shoe">Add shoe</string>
    <string name="cancel_shoe">Cancel</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="onboarding_header">Enjoy shoe store!</string>
    <string name="onboarding_description">Thanks to Shoe store you can easily browse available shoes or even create new one which will be immediately visible on shoe list</string>
    <string name="got_it">Got it</string>
    <string name="welcome_header">Welcome in Shoe store</string>
    <string name="welcome_description">This is a place where you can browse list of the shoes and add new ones</string>
    <string name="let_me_in">Let me in</string>
    <string name="shoe_size_number">Size: %.2f</string>
    <string name="shoe_name_item">%s</string>
    <string name="shoe_company_item">%s</string>
    <string name="shoe_description_item">Description:\n%s</string>
</resources>
