<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context=".screens.onboarding.OnboardingFragment">

        <TextView
            android:id="@+id/onboarding_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="@string/onboarding_header" />

        <TextView
            android:id="@+id/onboarding_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/onboarding_description" />

        <Button
            android:id="@+id/onboarding_continue_button"
            style="@style/BorderlessButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/got_it" />

    </LinearLayout>
</layout>